@@ -24,6 +24,7 @@
                   - removed -p and -b, added -u/--unit <value>
                   - added max stats (--type,-t and 't')
                   - added sum stats
+                  - move alot functions from retrieve.c into process.c
   12-20-2004 0.4: pre1:
                   - get_iface_stats cleanup
                   - plain and csv output added
